--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,35 +5,31 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-220.5KB/s(Youtube:不良林), server: ocikr.node.qchwnd.moe, port: 44600, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: ocikr.node.qchwnd.moe, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-582.0KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-473.1KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.96MB/s(Youtube:不良林), server: szcm.9218561.xyz, port: 24615, type: trojan, password: 270183d3-8fa4-3ec6-8946-3ac350e6838c, sni: szcm.9218561.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -44,26 +40,23 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +72,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
