--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,31 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-473.1KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.96MB/s(Youtube:不良林), server: szcm.9218561.xyz, port: 24615, type: trojan, password: 270183d3-8fa4-3ec6-8946-3ac350e6838c, sni: szcm.9218561.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.38MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-604.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-3.94MB/s(Youtube:不良林), server: cs.dfnode.top, port: 19301, type: vmess, uuid: dc8b6a8b-af76-3294-93e4-634d6e1b24a7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: cs.dfnode.top}}
+  - {name: 🇨🇳 中国-311.1KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -40,23 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -72,8 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-473.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
