--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-344.3KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-432.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: shcu.01.211129.xyz, port: 22788, type: trojan, password: 270183d3-8fa4-3ec6-8946-3ac350e6838c, sni: shcu.01.211129.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.90MB/s(Youtube:不良林), server: szcm.9218561.xyz, port: 24615, type: trojan, password: 270183d3-8fa4-3ec6-8946-3ac350e6838c, sni: szcm.9218561.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.54MB/s(Youtube:不良林), server: jp.dfnode.top, port: 19255, type: vmess, uuid: dc8b6a8b-af76-3294-93e4-634d6e1b24a7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jp.dfnode.top}}
+  - {name: 🇨🇳 中国-344.3KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.03MB/s(Youtube:不良林), server: cs.daxun.cyou, port: 20631, type: vmess, uuid: 99591e4d-b11e-4488-b366-53f3b6787bba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hinet04, ws-headers: {Host: cs.daxun.cyou}}
+  - {name: 🇨🇳 中国-5.72MB/s(Youtube:不良林), server: hk10-vm5.entry.ikuuu.casa, port: 458, type: vmess, uuid: b3bc07e6-452a-36fd-8476-bd7aac00f265, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: hk10-vm5.entry.ikuuu.casa}}
+  - {name: 🇨🇳 中国-5.59MB/s(Youtube:不良林), server: hk11-vm5.entry.ikuuu.casa, port: 459, type: vmess, uuid: b3bc07e6-452a-36fd-8476-bd7aac00f265, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: hk11-vm5.entry.ikuuu.casa}}
+  - {name: 🇨🇳 中国-664.5KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.12MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-664.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
