--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-672.5KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-535.0KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-322.1KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇨🇳 中国-9.03MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-915.1KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.90MB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: 2fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.07MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-672.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-915.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-672.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-915.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-672.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-915.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-672.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-915.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-672.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-915.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-672.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-915.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-672.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-915.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
